[package]
name = "rust-canvas-example"
version = "0.1.0"
authors = ["Mizuki HAGIMOTO <hagimotomizuki@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
]

# vim: set ts=2 sw=2 et:
