[package]
name = "rust-canvas-example"
version = "0.1.0"
authors = ["Mizuki HAGIMOTO <hagimotomizuki@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
imageproc = "0.19"
palette = "0.5"
rand = "0.7"
wasm-bindgen = "0.2"

[dependencies.getrandom]
version = "0.1"
features = [
  "wasm-bindgen"
]

[dependencies.image]
version = "0.22"
default-features = false

[dependencies.web-sys]
version = "0.3"
features = [
  "CanvasRenderingContext2d",
  "ImageData"
]

# vim: set ts=2 sw=2 et:
